--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Why I want to become a developer?</h1>
+	<p> Developers get to build amazing things! From websites and mobile apps to complex software systems, the possibilities are endless. You can bring your ideas to life and create something truly unique.</p>
+	
 
 </body>
 
